      now only returns a bool. It may help to recompile your scripts. If you
      want the old behaviour, use the new "keyval" command [Ralph]
    * Joystick didn't work at all in the Windows version [Mike]
    * "NPC X","NPC Y" and "NPC at spot" behaviour has been corrected: an
      NPC's position is now the tile its top left corner stands on [Ralph]
      
  * New Plotscripting Commands
    * "hero frame", "NPC frame" [Ralph Versteegen]
    * "get hero stat cap", "set capped hero stat"
    * "load menu"
    * "set [days/hours/minutes/seconds] of play", "get seconds of play" [Mike
      Caron]
    * "npc extra", "set npc extra" [Mike Caron]
    * "keyval"
    * "load sound", "free sound", "play sound", "stop sound", "pause sound"
      [Mike Caron]
    * "search string", "trim string"[Yuriy]
    * An existing command we forgot to mention in the whatsnew: "string compare"

  * Stuff only Developers Will Notice
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Reformatted NPC data with UDTs [Mike Caron]

Mar 15 2006 [tirgoviste]
  * New Features
    * Stat caps [Mike Caron]
    * "% based attacks damage instead of set" attack bitset [Mike Caron]
    * Precise weapon placement. (use . and , to choose which
      frame to edit) [Mike Caron]
    * NPC Placement Editor now shows the copy number of NPCs (the bottom
      number) [Mike Caron]

  * Bug Fixes
    * Pausing the music will probably cause "stuck notes" (i.e. notes that never
      get turned off) if any notes are playing at the time [Mike Caron]
    * Browsing for a replacement song, and cancelling deleted the existing song.
      [Mike Caron]
    * Rewards in battle are rewarded multiple times. [Mike Caron]
    * Linux: specifying a file on the command line now works even if the file
      is in a different directory. [James Paige]
    * Windows: bug 140 keyboard handling quirks [Simon Bradley, James Paige]
    * music_native now supports volume [Mike Caron]